Sculpt: Paint tool cavity custom curve crash #103013

Closed
opened 2022-12-08 07:16:12 +01:00 by Adrian Mucik · 17 comments

Operating system: Windows 10
Graphics card: NVDIA RTX 2060 Super

Broken: 3.4, 3.5

Steps to reproduce the issue:

  • Switch to Sculpt Mode or open default sculpting template file
  • Choose the Paint Tool
  • Click on Brush dropdown
  • Enable Cavity by clicking on Advanced >> Cavity in the "Brush" dropdown

Enable Custom Curve under Advanced >> Cavity in the "Brush" dropdown

PaintCavityCrash.png

Result:
No Custom Curve is shown as in other Sculpting Tools & after trying to paint with the Paint tool setup this way blender instantly crashes.

Operating system: Windows 10 Graphics card: NVDIA RTX 2060 Super Broken: 3.4, 3.5 Steps to reproduce the issue: - Switch to Sculpt Mode or open default sculpting template file - Choose the Paint Tool - Click on Brush dropdown - Enable Cavity by clicking on Advanced >> Cavity in the "Brush" dropdown # Enable Custom Curve under Advanced >> Cavity in the "Brush" dropdown ![PaintCavityCrash.png](https://archive.blender.org/developer/F14044325/PaintCavityCrash.png) Result: No **Custom Curve** is shown as in other Sculpting Tools & after trying to paint with the **Paint** tool setup this way blender instantly crashes.
Author

Added subscriber: @Soudne

Added subscriber: @Soudne
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Pratik Borhade changed title from Sculpt Mode "Paint" tool cavity custom curve crash to Sculpt: Paint tool cavity custom curve crash 2022-12-08 07:43:30 +01:00
Member

Added subscriber: @JosephEagar

Added subscriber: @JosephEagar
Member

I can't reproduce this.

I can't reproduce this.
Philipp Oeser removed the
Interest
Sculpt, Paint & Texture
label 2023-02-10 09:10:56 +01:00
Member

Also cannot reproduce this.

Just checking if this is still an issue for you in recent builds from https://builder.blender.org/download/daily/ @Soudne @PratikPB2123 ?

Also cannot reproduce this. Just checking if this is still an issue for you in recent builds from https://builder.blender.org/download/daily/ @Soudne @PratikPB2123 ?
Philipp Oeser added
Status
Needs Information from User
and removed
Status
Confirmed
labels 2024-02-20 17:10:49 +01:00
Member

Can still confirm in current main: 63f482d55091b12324d0b78a2f151083542ccd65

Call Stack
Stack trace:
blender.exe         :0x00007FF627395120  BKE_curvemap_evaluateF C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\colortools.cc:980
blender.exe         :0x00007FF627396B90  BKE_curvemapping_evaluateF C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\colortools.cc:1005
blender.exe         :0x00007FF627EACBF0  blender::ed::sculpt_paint::auto_mask::factor_get C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\sculpt_automasking.cc:585
blender.exe         :0x00007FF627E90BE0  SCULPT_brush_strength_factor C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\sculpt.cc:2418
blender.exe         :0x00007FF627EE5BE0  blender::ed::sculpt_paint::color::do_paint_brush_task C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\sculpt_paint_color.cc:167
blender.exe         :0x00007FF627EE5590  blender::ed::sculpt_paint::color::do_paint_brush C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\sculpt_paint_color.cc:326
blender.exe         :0x00007FF627E98FC0  do_brush_action C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\sculpt.cc:3528
blender.exe         :0x00007FF627E9B340  do_tiled C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\sculpt.cc:3859
blender.exe         :0x00007FF627E9B0B0  do_symmetrical_brush_actions C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\sculpt.cc:3948
blender.exe         :0x00007FF627E9FB50  blender::ed::sculpt_paint::sculpt_stroke_update_step C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\sculpt.cc:5534
blender.exe         :0x00007FF627E63550  blender::ed::sculpt_paint::paint_brush_stroke_add_step C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\paint_stroke.cc:621
blender.exe         :0x00007FF627E64910  blender::ed::sculpt_paint::paint_space_stroke C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\paint_stroke.cc:868
blender.exe         :0x00007FF627E65A20  blender::ed::sculpt_paint::paint_stroke_modal C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\paint_stroke.cc:1586
blender.exe         :0x00007FF62721DE40  wm_handler_operator_call C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:2484
blender.exe         :0x00007FF62721F2D0  wm_handlers_do_intern C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3394
blender.exe         :0x00007FF62721E4D0  wm_handlers_do C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3447
blender.exe         :0x00007FF62721AB90  wm_event_do_handlers C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:4074
blender.exe         :0x00007FF6271FCA00  WM_main C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.cc:622
blender.exe         :0x00007FF6271A53F0  main C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\creator\creator.cc:579
blender.exe         :0x00007FF62850EFE4  __scrt_common_main_seh D:\a\_work\1\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288
KERNEL32.DLL        :0x00007FF90B3B2560  BaseThreadInitThunk
ntdll.dll           :0x00007FF90C06AA30  RtlUserThreadStart
Can still confirm in current main: `63f482d55091b12324d0b78a2f151083542ccd65` <details> <summary> Call Stack </summary> ``` Stack trace: blender.exe :0x00007FF627395120 BKE_curvemap_evaluateF C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\colortools.cc:980 blender.exe :0x00007FF627396B90 BKE_curvemapping_evaluateF C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\colortools.cc:1005 blender.exe :0x00007FF627EACBF0 blender::ed::sculpt_paint::auto_mask::factor_get C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\sculpt_automasking.cc:585 blender.exe :0x00007FF627E90BE0 SCULPT_brush_strength_factor C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\sculpt.cc:2418 blender.exe :0x00007FF627EE5BE0 blender::ed::sculpt_paint::color::do_paint_brush_task C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\sculpt_paint_color.cc:167 blender.exe :0x00007FF627EE5590 blender::ed::sculpt_paint::color::do_paint_brush C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\sculpt_paint_color.cc:326 blender.exe :0x00007FF627E98FC0 do_brush_action C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\sculpt.cc:3528 blender.exe :0x00007FF627E9B340 do_tiled C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\sculpt.cc:3859 blender.exe :0x00007FF627E9B0B0 do_symmetrical_brush_actions C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\sculpt.cc:3948 blender.exe :0x00007FF627E9FB50 blender::ed::sculpt_paint::sculpt_stroke_update_step C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\sculpt.cc:5534 blender.exe :0x00007FF627E63550 blender::ed::sculpt_paint::paint_brush_stroke_add_step C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\paint_stroke.cc:621 blender.exe :0x00007FF627E64910 blender::ed::sculpt_paint::paint_space_stroke C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\paint_stroke.cc:868 blender.exe :0x00007FF627E65A20 blender::ed::sculpt_paint::paint_stroke_modal C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\paint_stroke.cc:1586 blender.exe :0x00007FF62721DE40 wm_handler_operator_call C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:2484 blender.exe :0x00007FF62721F2D0 wm_handlers_do_intern C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3394 blender.exe :0x00007FF62721E4D0 wm_handlers_do C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3447 blender.exe :0x00007FF62721AB90 wm_event_do_handlers C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:4074 blender.exe :0x00007FF6271FCA00 WM_main C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.cc:622 blender.exe :0x00007FF6271A53F0 main C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\creator\creator.cc:579 blender.exe :0x00007FF62850EFE4 __scrt_common_main_seh D:\a\_work\1\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288 KERNEL32.DLL :0x00007FF90B3B2560 BaseThreadInitThunk ntdll.dll :0x00007FF90C06AA30 RtlUserThreadStart ``` </details>
Member

Still cant repro.a crash, @PratikPB2123 maybe you could check if these are properly called?

diff --git a/source/blender/editors/sculpt_paint/sculpt_automasking.cc b/source/blender/editors/sculpt_paint/sculpt_automasking.cc
index 78b2598c8cc..fef2fd9b250 100644
--- a/source/blender/editors/sculpt_paint/sculpt_automasking.cc
+++ b/source/blender/editors/sculpt_paint/sculpt_automasking.cc
@@ -494,6 +494,7 @@ static float calc_cavity_factor(Cache *automasking, SculptSession *ss, PBVHVertR
       (automasking->settings.flags & BRUSH_AUTOMASKING_CAVITY_USE_CURVE))
   {
     factor = inverted ? 1.0f - factor : factor;
+    printf("BKE_curvemapping_evaluateF\n");
     factor = BKE_curvemapping_evaluateF(automasking->settings.cavity_curve, 0, factor);
     factor = inverted ? 1.0f - factor : factor;
   }
@@ -747,6 +748,7 @@ static void cache_settings_update(Cache &automasking,
   }
 
   if (brush && (brush->automasking_flags & BRUSH_AUTOMASKING_CAVITY_ALL)) {
+    printf("setting automasking.settings.cavity_curve to brush->automasking_cavity_curve\n");
     automasking.settings.cavity_curve = brush->automasking_cavity_curve;
     automasking.settings.cavity_factor = brush->automasking_cavity_factor;
     automasking.settings.cavity_blur_steps = brush->automasking_cavity_blur_steps;
@@ -845,6 +847,7 @@ std::unique_ptr<Cache> cache_init(const Sculpt *sd, const Brush *brush, Object *
 
     if (mode_enabled(sd, brush, BRUSH_AUTOMASKING_CAVITY_USE_CURVE)) {
       if (brush) {
+        printf("calling BKE_curvemapping_init\n");
         BKE_curvemapping_init(brush->automasking_cavity_curve);
       }
Still cant repro.a crash, @PratikPB2123 maybe you could check if these are properly called? ```diff diff --git a/source/blender/editors/sculpt_paint/sculpt_automasking.cc b/source/blender/editors/sculpt_paint/sculpt_automasking.cc index 78b2598c8cc..fef2fd9b250 100644 --- a/source/blender/editors/sculpt_paint/sculpt_automasking.cc +++ b/source/blender/editors/sculpt_paint/sculpt_automasking.cc @@ -494,6 +494,7 @@ static float calc_cavity_factor(Cache *automasking, SculptSession *ss, PBVHVertR (automasking->settings.flags & BRUSH_AUTOMASKING_CAVITY_USE_CURVE)) { factor = inverted ? 1.0f - factor : factor; + printf("BKE_curvemapping_evaluateF\n"); factor = BKE_curvemapping_evaluateF(automasking->settings.cavity_curve, 0, factor); factor = inverted ? 1.0f - factor : factor; } @@ -747,6 +748,7 @@ static void cache_settings_update(Cache &automasking, } if (brush && (brush->automasking_flags & BRUSH_AUTOMASKING_CAVITY_ALL)) { + printf("setting automasking.settings.cavity_curve to brush->automasking_cavity_curve\n"); automasking.settings.cavity_curve = brush->automasking_cavity_curve; automasking.settings.cavity_factor = brush->automasking_cavity_factor; automasking.settings.cavity_blur_steps = brush->automasking_cavity_blur_steps; @@ -845,6 +847,7 @@ std::unique_ptr<Cache> cache_init(const Sculpt *sd, const Brush *brush, Object * if (mode_enabled(sd, brush, BRUSH_AUTOMASKING_CAVITY_USE_CURVE)) { if (brush) { + printf("calling BKE_curvemapping_init\n"); BKE_curvemapping_init(brush->automasking_cavity_curve); } ```
Member

Crash is because brush->automasking_cavity_curve is null in some cases.

Crash is because `brush->automasking_cavity_curve` is null in some cases.
Member

So I added breakpoint inside brush_blend_read_data, the brush in that file has brush->automasking_cavity_curve null itself 👀
May not be bug in blender ig

So I added breakpoint inside `brush_blend_read_data`, the brush in that file has `brush->automasking_cavity_curve` null itself 👀 May not be bug in blender ig
Member

Does this fix it?

diff --git a/source/blender/editors/sculpt_paint/sculpt_automasking.cc b/source/blender/editors/sculpt_paint/sculpt_automasking.cc
index 78b2598c8cc..ca9b28bf3c6 100644
--- a/source/blender/editors/sculpt_paint/sculpt_automasking.cc
+++ b/source/blender/editors/sculpt_paint/sculpt_automasking.cc
@@ -845,6 +845,9 @@ std::unique_ptr<Cache> cache_init(const Sculpt *sd, const Brush *brush, Object *
 
     if (mode_enabled(sd, brush, BRUSH_AUTOMASKING_CAVITY_USE_CURVE)) {
       if (brush) {
+        if (!brush->automasking_cavity_curve) {
+          brush->automasking_cavity_curve = BKE_sculpt_default_cavity_curve();
+        }
         BKE_curvemapping_init(brush->automasking_cavity_curve);
       }
Does this fix it? ```diff diff --git a/source/blender/editors/sculpt_paint/sculpt_automasking.cc b/source/blender/editors/sculpt_paint/sculpt_automasking.cc index 78b2598c8cc..ca9b28bf3c6 100644 --- a/source/blender/editors/sculpt_paint/sculpt_automasking.cc +++ b/source/blender/editors/sculpt_paint/sculpt_automasking.cc @@ -845,6 +845,9 @@ std::unique_ptr<Cache> cache_init(const Sculpt *sd, const Brush *brush, Object * if (mode_enabled(sd, brush, BRUSH_AUTOMASKING_CAVITY_USE_CURVE)) { if (brush) { + if (!brush->automasking_cavity_curve) { + brush->automasking_cavity_curve = BKE_sculpt_default_cavity_curve(); + } BKE_curvemapping_init(brush->automasking_cavity_curve); } ```
Member

So I added breakpoint inside brush_blend_read_data, the brush in that file has brush->automasking_cavity_curve null itself 👀
May not be bug in blender ig

Ah, wasnt aware this is about a particular file? (was just using the repro steps from my default startup file...)

> So I added breakpoint inside `brush_blend_read_data`, the brush in that file has `brush->automasking_cavity_curve` null itself 👀 > May not be bug in blender ig Ah, wasnt aware this is about a particular file? (was just using the repro steps from my default startup file...)
Member

Will check your fix. This is happening in default sculpting file btw.

Will check your fix. This is happening in default sculpting file btw.
Member

Instead of assigning brush->automasking_cavity_curve, If I do automasking->settings.cavity_curve = BKE_sculpt_default_cavity_curve(); then crash is prevented. But my knowledge is bit short here.

btw brush is passed as const in cache_init()

Instead of assigning `brush->automasking_cavity_curve`, If I do `automasking->settings.cavity_curve = BKE_sculpt_default_cavity_curve();` then crash is prevented. But my knowledge is bit short here. btw brush is passed as const in `cache_init()`
Member

@farsthary might want to check

will reset to confirmed (since @PratikPB2123 is able to repro consistently).

And since this is a crasher, will also raise priority

@farsthary might want to check will reset to confirmed (since @PratikPB2123 is able to repro consistently). And since this is a crasher, will also raise priority
Philipp Oeser added
Status
Confirmed
Priority
High
and removed
Status
Needs Information from User
Priority
Normal
labels 2024-02-22 11:08:36 +01:00
Contributor

@PratikPB2123 - Changing the automasking settings won't be a long term fix since it still means the user would be unable to edit the curve. That struct is just used as a cache of data.

My knowledge of how the blendfile reading / writing works is limited, but doesn't the order matter between the two methods? I'm not sure if this would be the root cause of the issue, but the order appears to be mismatched.

static void brush_blend_write(BlendWriter *writer, ID *id, const void *id_address)
{
  Brush *brush = (Brush *)id;

  BLO_write_id_struct(writer, Brush, id_address, &brush->id);
  BKE_id_blend_write(writer, &brush->id);

  if (brush->curve) {
    BKE_curvemapping_blend_write(writer, brush->curve);
  }

  if (brush->automasking_cavity_curve) {
    BKE_curvemapping_blend_write(writer, brush->automasking_cavity_curve);
  }
...

vs

static void brush_blend_read_data(BlendDataReader *reader, ID *id)
{
  Brush *brush = (Brush *)id;

  /* Falloff curve. */
  BLO_read_data_address(reader, &brush->curve);

  BLO_read_data_address(reader, &brush->gradient);

  if (brush->curve) {
    BKE_curvemapping_blend_read(reader, brush->curve);
  }
  else {
    BKE_brush_curve_preset(brush, CURVE_PRESET_SHARP);
  }

  BLO_read_data_address(reader, &brush->automasking_cavity_curve);
  if (brush->automasking_cavity_curve) {
    BKE_curvemapping_blend_read(reader, brush->automasking_cavity_curve);
  }
  else {
    brush->automasking_cavity_curve = BKE_sculpt_default_cavity_curve();
  }
...
@PratikPB2123 - Changing the automasking settings won't be a long term fix since it still means the user would be unable to edit the curve. That struct is just used as a cache of data. My knowledge of how the blendfile reading / writing works is limited, but doesn't the order matter between the two methods? I'm not sure if this would be the root cause of the issue, but the order appears to be mismatched. ```Cpp static void brush_blend_write(BlendWriter *writer, ID *id, const void *id_address) { Brush *brush = (Brush *)id; BLO_write_id_struct(writer, Brush, id_address, &brush->id); BKE_id_blend_write(writer, &brush->id); if (brush->curve) { BKE_curvemapping_blend_write(writer, brush->curve); } if (brush->automasking_cavity_curve) { BKE_curvemapping_blend_write(writer, brush->automasking_cavity_curve); } ... ``` vs ```Cpp static void brush_blend_read_data(BlendDataReader *reader, ID *id) { Brush *brush = (Brush *)id; /* Falloff curve. */ BLO_read_data_address(reader, &brush->curve); BLO_read_data_address(reader, &brush->gradient); if (brush->curve) { BKE_curvemapping_blend_read(reader, brush->curve); } else { BKE_brush_curve_preset(brush, CURVE_PRESET_SHARP); } BLO_read_data_address(reader, &brush->automasking_cavity_curve); if (brush->automasking_cavity_curve) { BKE_curvemapping_blend_read(reader, brush->automasking_cavity_curve); } else { brush->automasking_cavity_curve = BKE_sculpt_default_cavity_curve(); } ... ```
Contributor

This occurs specifically with the Sculpting startup.blend file. When that file is loaded, it doesn't have the Paint brush which then means that the brush_blend_read_data for that block is never read that is supposed to initialize this value.

This occurs specifically with the Sculpting `startup.blend` file. When that file is loaded, it doesn't have the `Paint` brush which then means that the `brush_blend_read_data` for that block is never read that is supposed to initialize this value.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-01 22:06:49 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103013
No description provided.