source/blender/blenloader/intern/versioning_defaults.cc
@@ -853,4 +853,12 @@ void BLO_update_defaults_startup_blend(Main *bmain, const char *app_template)
       brush->automasking_view_normal_falloff = default_brush->automasking_view_normal_falloff;
     }
   }
+
+  {
+    LISTBASE_FOREACH (Brush *, brush, &bmain->brushes) {
+      if (!brush->automasking_cavity_curve) {
+        brush->automasking_cavity_curve = BKE_sculpt_default_cavity_curve();
+      }
+    }
+  }
 }
